--- a/format/creating.html
+++ b/format/creating.html
@@ -147,7 +147,7 @@
 set using the various methods shown is this section of the document. Once
 the Format has been created it can be passed to one of the worksheet
 <code>write_*()</code> methods. Multiple properties can be set by chaining them
-together:</p>
+together, for example:</p>
 <pre><pre class="playground"><code class="language-rust">use rust_xlsxwriter::{Format, Workbook, XlsxColor, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
