--- a/author.html
+++ b/author.html
@@ -143,7 +143,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="author"><a class="header" href="#author">Author</a></h1>
-<p>XlsxWriter was written by John McNamara, who also wrote:</p>
+<p><code>rust_xlsxwriter</code> was written by John McNamara, who also wrote:</p>
 <ul>
 <li>
 <p><a href="https://xlsxwriter.readthedocs.io">XlsxWriter (Python)</a></p>
